Fixing spacing on footer

--- a/src/scss/components/footer-bar.scss
+++ b/src/scss/components/footer-bar.scss
@@ -13,6 +13,10 @@ footer {
     .left {
         margin-top: 1em;
         flex: 1;
+
+        a {
+            margin-left: 1em;
+        }
     }
 
     .right {
